--- a/src/cppProject/Genie/Genie.vcxproj
+++ b/src/cppProject/Genie/Genie.vcxproj
@@ -107,10 +107,12 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>lib\openal\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>lib\openal\OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -153,6 +155,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="lib\record\aldlist.cpp" />
+    <ClCompile Include="lib\record\CWaves.cpp" />
+    <ClCompile Include="lib\record\Framework.cpp" />
+    <ClCompile Include="lib\record\LoadOAL.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\Genie_Capture.cpp" />
     <ClCompile Include="src\Genie_Convenience.cpp" />
